// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormSwitch ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-9ttzdx-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-1twhucs-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-9wiyti-MuiButtonBase-root-MuiSwitch-switchBase"
          color="primary"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1or18zx-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1ijgvmu-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-zknrib-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-uuxgud-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-9ttzdx-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-v1ntyu-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-f0gk3r-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-vt4fc5-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1ijgvmu-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-pkf8u0-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-vt4fc5-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-m2i688-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-11n2pmj-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1yxpnt5-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-vi2dvs-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1c0jcfm-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-ypopnc-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1hu42yv-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-169sx1-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-166g0ir-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1h0w15v-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1hvcons-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;
